issue-506: align Individuals view with Properties, Terms and Ontologies views
initial fix for #506

--- a/ols-web/src/main/resources/scss/new_ols.scss
+++ b/ols-web/src/main/resources/scss/new_ols.scss
@@ -396,6 +396,11 @@ input[type="search"].select2-search__field {
     padding-left: 12px;
 }
 
+.term-section#content,
+.property-section#content {
+    padding: 0;
+}
+
 /* Search Box stuff(?) */
 .checkbox-inline {
     margin-top: -20px;
